log
Thu May  5 15:07:23 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:15: error: ‘heapArray’ undeclared (first use in this function)
     return pq-heapArray[0]->data;
               ^~~~~~~~~
heap.c:21:15: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
442a19b
Thu May  5 15:07:36 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return pq->heapArray[0]->data;
                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
598bb06
Thu May  5 15:07:49 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:14: error: ‘pq’ is a pointer; did you mean to use ‘->’?
     return pq.heapArray[0]->data;
              ^
              ->
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
9a841c4
Thu May  5 15:07:58 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return pq->heapArray[0]->data;
                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
0f1eaaf
Thu May  5 15:11:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: incompatible types when returning type ‘heapElem {aka struct nodo}’ but ‘void *’ was expected
   return pq->heapArray[0];
          ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bce2b1a
Thu May  5 15:12:31 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[1]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
67ba1fe
Thu May  5 15:12:40 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
b495f6d
Thu May  5 15:15:04 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: invalid operands to binary == (have ‘heapElem {aka struct nodo}’ and ‘void *’)
   if(pq->heapArray[0] == NULL)return NULL;
      ~~~~~~~~~~~~~~~~ ^~
heap.c:22:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
f4fc212
Thu May  5 15:15:20 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   if(pq->heapArray[0]->data == NULL)return NULL;
                      ^~
heap.c:22:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
58e9a34
Thu May  5 15:15:29 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
51d2803
Thu May  5 15:15:37 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
48435ce
Thu May  5 15:17:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: invalid operands to binary == (have ‘heapElem {aka struct nodo}’ and ‘void *’)
   if(pq->heapArray[0] == NULL)return NULL;
      ~~~~~~~~~~~~~~~~ ^~
Compilation failed
dd94548
Thu May  5 15:18:07 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c60c721
Thu May  5 15:23:04 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   Heap* hp->capac = 3;
           ^~
heap.c:37:11: error: expected expression before ‘->’ token
heap.c:38:3: error: ‘hp’ undeclared (first use in this function)
   hp->heapArray = (heapElem *) malloc (hp->capac,sizeof(heapElem));
   ^~
heap.c:38:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:38:32: error: too many arguments to function ‘malloc’
   hp->heapArray = (heapElem *) malloc (hp->capac,sizeof(heapElem));
                                ^~~~~~
In file included from test.c:2:0:
/usr/include/stdlib.h:539:14: note: declared here
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
              ^~~~~~
Compilation failed
6b96b72
